--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "date-fns": "^4.1.0",
     "firebase": "^10.13.2",
     "react": "^18.3.1",
+    "react-datepicker": "^7.4.0",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.26.2",
